# uri

./: .boilerplate.txt  .clang-format  CMakeLists.txt  README.md  SECURITY.md
.github/workflows/: ci.yaml  codacy.yaml  codecov.yaml  codeql.yml  fuzztest.yaml  msvc.yaml  scorecard.yaml
cmake/: setup_gtest.cmake  setup_target.cmake
include/uri/: find_last.hpp  icubaby.hpp  parts.hpp  pct_decode.hpp  pctdecode.hpp  portab.hpp  punycode.hpp  rule.hpp  starts_with.hpp  uri.hpp
lib/uri/: CMakeLists.txt  parts.cpp  pctencode.cpp  punycode.cpp  rule.cpp  uri.cpp
tools/: CMakeLists.txt
tools/uri-split/: CMakeLists.txt
tools/view/: CMakeLists.txt  view.cpp
unittests/uri/: CMakeLists.txt  test_find_last.cpp  test_parts.cpp  test_pct_decode.cpp  test_pctdecode.cpp  test_pctencode.cpp  test_punycode.cpp  test_starts_with.cpp  test_uri.cpp
